[gd_scene load_steps=4 format=3 uid="uid://cominubxwmubp"]

[ext_resource type="Theme" uid="uid://dpvydela4folv" path="res://resources/theme.tres" id="1_4ckg1"]
[ext_resource type="Script" path="res://scripts/GameOverScreen.gd" id="2_k7f8w"]
[ext_resource type="Texture2D" uid="uid://cjqak4scr7fao" path="res://assets/blackboard.jpg" id="3_4ebhi"]

[node name="GameOverScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_4ckg1")
script = ExtResource("2_k7f8w")

[node name="Background" type="TextureRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_4ebhi")

[node name="Title" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -346.0
offset_top = 40.0
offset_right = 347.0
offset_bottom = 161.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 100
text = "You have been promoted to
Head Drinks Artist!"
horizontal_alignment = 1

[node name="CustomerLabel" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -532.0
offset_top = 450.0
offset_right = 534.0
offset_bottom = 571.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 100
text = "You served x customers"
horizontal_alignment = 1

[node name="ScoreLabel" type="Label" parent="."]
offset_left = 490.0
offset_top = 571.0
offset_right = 1450.0
offset_bottom = 692.0
theme_override_font_sizes/font_size = 100
text = "with a score of 99999"
horizontal_alignment = 1

[node name="Button" type="Button" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -245.0
offset_top = -230.0
offset_right = 246.0
offset_bottom = -108.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 60
text = "Play Again"

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
